# storycreator-api

./: README.md  alembic.ini  prod.env  requirements.txt  setup.cfg  tox.ini
app/: main.py
app/api/dependencies/: secret_key.py
app/api/errors/: request_validation_error.py  response_validation_error.py
app/api/routes/: api.py
app/api/routes/public/: choices.py  games.py  scenes.py
app/api/routes/secret/: choices.py  games.py  scenes.py
app/core/: config.py  logging.py
app/core/settings/: app.py  base.py  development.py  production.py  test.py
app/db/: database.py
app/db/migrations/: env.py
app/db/migrations/versions/: 20231006_1348_b15a77597397_uuid.py  20231006_1407_e26be6b5e713_scene_title_created.py  20231009_1450_a4cdc336ab21_deleted_at_column_created_for_all_tables.py  20231009_1829_f99fdaa8ae1c_game_id_foreign_key_added_to_choices.py  20231010_2104_efc44391b689_is_active_modified.py
app/db/models/: __init__.py  base.py  choices.py  games.py  scenes.py
app/schemas/: choices.py  games.py  scenes.py  test.py
app/services/: base_service.py  choice_service.py  game_service.py  scene_service.py  test.py
