[metadata]
name = storycreator-api
# See setup.py version generator
url = https://github.com/oktayozkan0/storycreator-api
description = Simple choice based game api
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Oktar Ozkan
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License 2.0 (Apache-2.0)
    Operating System :: OS Independent
    Topic :: System :: Installation/Setup
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
python_requires = >=3.10
packages = find:
install_requires =
    fastapi==0.103.1
    uvicorn==0.23.2
    SQLAlchemy==2.0.20
    pydantic-settings==2.0.3
    loguru==0.7.2
    alembic==1.12.0
    asyncpg==0.28.0
    gunicorn==21.2.0

[options.extras_require]
lint =
    flake8
    flake8-docstrings
    flake8-colors
    pyproject-flake8
    pylint
    mypy
    black
    isort
    pylint
    mypy
    types-PyYAML
    codespell

unittests =
    pytest
    pytest-cov
    pytest-mock
    pytest-asyncio
    aiounittest
    gevent

functests =
    pytest

[options.packages.find]
exclude =
    tests

[options.package_data]
* =
    *.csv

[aliases]
test = pytest
